--- a/About.html
+++ b/About.html
@@ -45,7 +45,7 @@
 <div class="row">
     <div class="col-md-8">
     <p>Welcome, my name is Daniele Thomas and I am a junior developer at <strong><a href="https://www.elevenfifty.org" class="text-danger">Eleven Fifty Academy</a></strong>. I have a deep love of medicine and an apptitude for IT related subjects. I am looking forward to merging my medical experience with my newfound coding knowledge.</p></div>
-    <div class="col-md-4>"><img src="assets/Daniele4.jpg" alt="Daniele pic"></div></div>
+    <div class="col-md-4>"><img src="Assets/Daniele4.jpg" alt="Daniele pic"></div></div>
 
     <hr>
 
@@ -66,7 +66,7 @@
             
             <h3 class="text-primary">Martial Arts</h3>
             <br>
-            <a href="https://kravmagaindy.com/"><img  class="krav" src="assets/krav-maga-logo-DE85039B5E-seeklogo.com.png"></a>
+            <a href="https://kravmagaindy.com/"><img  class="krav" src="Assets/krav-maga-logo-DE85039B5E-seeklogo.com.png"></a>
             <br>
             <br>
             <br>
@@ -81,7 +81,7 @@
             <br>
             <br>
             <br>
-            <img class="aicon" src="assets/transparentsharkicon.png">
+            <img class="aicon" src="Assets/transparentsharkicon.png">
             <br>
             <br>
             <br>
@@ -96,7 +96,7 @@
             <br>
             <br>
             <br>
-            <img src="assets/book_stack.png">
+            <img src="Assets/book_stack.png">
             <br>
             <br>
             <br>
