--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
     <hr>
 <div class="row">
     <div class="col-md-8">
-    <p>Welcome, my name is Daniele Thomas and I am a junior developer at <strong><a href="https://www.elevenfifty.org" class="text-danger">Eleven Fifty Academy</a></strong>. I have a deep love of medicine and an apptitude for IT related subjects. I am looking forward to merging my medical experience with my newfound coding knowledge.</p></div>
+    <p>Welcome, my name is <a href="Assets/Software Development Resume portfolio Daniele Thomas.pdf">Daniele Thomas</a> and I am a junior developer graduate from <strong><a href="https://www.elevenfifty.org" class="text-danger">Eleven Fifty Academy</a></strong>. I have a deep love of medicine and have a Bachelor's in Nursing. I have an apptitude for IT related subjects and worked in the field in various capacities. I am looking forward to merging my medical experience with my newfound coding knowledge.</p></div>
     <div class="col-md-4>"><img src="Assets/Daniele4.jpg" alt="Daniele pic"></div></div>
 
     <hr>
