--- a/Experience.html
+++ b/Experience.html
@@ -12,6 +12,7 @@
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="Experience.css">
 </head>
 <div class="sticky-top">
 
@@ -38,7 +39,7 @@
     </nav></div>
 <body class="experience">
 <br>
-    <h2 class="text-center text-color:black text-uppercase"><strong>Experience</strong></h2>
+    <h2 class="text-center text-primary text-uppercase"><strong>Experience</strong></h2>
 
     <img class="eicon" src="Assets/transparentsharkicon.png">
 
