--- a/Projects.html
+++ b/Projects.html
@@ -60,7 +60,7 @@
 
       <figure class="rellax">
         <img src="Assets/FreeBlueShark.jpg" alt="Great White">
-       <a href="https://github.com/danisthomas/SharkTracker.git"> <figcaption class="rellax" data-rellax-speed="1">Shark Tracker MVC</figcaption></a>
+       <a href="https://sharktrackerwebmvc.azurewebsites.net"> <figcaption class="rellax" data-rellax-speed="1">Shark Tracker MVC</figcaption></a>
       </figure>
 
       
